--- a/generic/contentFilterGeneric/contentFilterGeneric.css
+++ b/generic/contentFilterGeneric/contentFilterGeneric.css
@@ -3,7 +3,7 @@
 }
 
 #content_listContainer > :first-child {
-    background-color: #4B515D !important;
+    background-color: #515151 !important;
 }
 
 #content_listContainer > :first-child span {
